--- a/docs/styles/table.css
+++ b/docs/styles/table.css
@@ -1,3 +1,18 @@
+body {
+    font: 11pt Verdana;
+    background-color: rgb(29, 110, 202);
+    background: linear-gradient(131.03deg, rgb(29, 110, 202) 2.54%, #7be9ff 77.08%);
+}
+
+header {
+    color: white;
+    font: 16pt Verdana;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
+    padding: 8px;
+}
+
 table#solucoes {
     background-color: rgb(228, 228, 228);
     text-align: justify;
@@ -10,8 +25,8 @@ table#solucoes {
 }
 
 thead {
-    text-transform: uppercase;
-
+    text-decoration: underline;
+    
 
 }
 
@@ -57,4 +72,9 @@ div#resultados {
 div#dosemax {
     background-color: aqua;
     
+}
+
+div#resultados {
+    padding: 8px 8px;
+    text;
 }
