--- a/docs/styles/table.css
+++ b/docs/styles/table.css
@@ -13,6 +13,13 @@ header {
     padding: 8px;
 }
 
+input#form-peso {
+    max-width: 100px;
+    padding: 8px;
+    text-align: center;
+    border-style: dotted;
+}
+
 table#solucoes {
     background-color: rgb(228, 228, 228);
     text-align: justify;
@@ -59,7 +66,7 @@ th {
 }
 
 div#resultados {
-    background-color: bisque;
+    background-color: white;
     width: auto;
     text-align: justify;
     border-radius: 10px;
@@ -76,5 +83,5 @@ div#dosemax {
 
 div#resultados {
     padding: 8px 8px;
-    text;
+    
 }
